# sp-to-pandas

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sp_to_pandas/: CredentialMethods.py  RequestMethods.py  __init__.py  list_df.py  main.py
src/sp_to_pandas/Auth/: __init__.py
src/sp_to_pandas/Sharepoint/: Requests.py
src/sp_to_pandas/Transform/: list_to_df.py
